fix contact spacing

--- a/src/assets/contactPage.css
+++ b/src/assets/contactPage.css
@@ -121,13 +121,30 @@ iframe {
   .contact-info_content {
     order: -1;
     max-height: 100%;
-    padding: 20px;
+    padding: 20px 50% 20px 50px;
+    text-align: left;
+   
+  }
+
+  .contact-info {
+    position: relative;
+    background-color: #f2e6e2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 0;
+    
   }
 
   .contact-info_map {
-    order: 1;
-    min-height: 400px;
+    position: relative;
+    height: 100vh;
+    width: 90vw;
+    border: 0;
+    margin: 60px 0;
+    padding: 0 20px;
+    border-radius: 5%;
+    
   }
 }
 /* mobile */
@@ -162,16 +179,13 @@ iframe {
     padding-right: 0;
   }
 
-  .contact-info_content {
-    padding: 15px;
-  }
 
   .contact-info_content h2 {
     font-size: 25px;
   }
 
   .contact-info_content p {
-    font-size: 12px;
+    font-size: 14px;
   }
 
   .contact-info_map {
